[package]
name = "blog-back-end"
version = "0.1.0"
authors = ["handsome0hell <handsome0hell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
serde = "1.0.114"
actix-cors = "0.2.0"
